<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nacionCostaRica</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_home">LA NACIÓN</string>
    <string name="title_sections">SECCIONES</string>
    <string name="section_name">Destacadas</string>
    <string name="title_settings">CONFIGURACIONES</string>
    <string name="search_message">Buscar noticias</string>

    <string name="item_module_title">Aficionados ticos acompañaron a Celso Borges en juego del AIK</string>
    <string name="item_module_description">Descripción bla bla bla bla Aficionados ticos acompañaron a Celso Borges en juego del AIK</string>
    <string name="item_article_title">9:30 A.M.</string>
    <string name="item_article_summary">Aficionados ticos acompañaron a Celso Borges en juego del AIK</string>
    <string name="item_video_time">9:30 A.M.</string>
    <string name="item_video_title">Aficionados ticos acompañaron a Celso Borges en juego del AIK</string>


    <string name="dummy_author_photo">Albert Marín/LANACIÓN</string>
    <string name="dummy_date_long_format">25 de Septiembre de 2014 A: 12:00 A.M.</string>
    <string name="dummy_author_news">Albert Marín/LANACIÓN</string>
    <string name="dummy_section_title">DEPORTES</string>
    <string name="dummy_text_date">MUNDO 9:30 A.M.</string>
    <string name="dummy_text_title">Aficionados ticos acompañaron a Celso Borges en juego del AIK</string>
    <string name="dummy_text_summary">Descripción bla bla bla bla Aficionados ticos acompañaron a Celso Borges en juego del AIK</string>
    <string name="dummy_text_body">Descripción bla bla bla bla Aficionados ticos acompañaron a Celso Borges en juego del AIK. Descripción bla bla bla bla Aficionados ticos acompañaron a Celso Borges en juego del AIK. Descripción bla bla bla bla Aficionados ticos acompañaron a Celso Borges en juego del AIK</string>

</resources>
