<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_module_height">

        <android.support.v4.view.ViewPager
            android:id="@+id/imageGalleryViewPager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_module_height"/>

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_module_height"
            android:layout_alignParentTop="true"
            android:text="@string/dummy_text_summary"
            android:gravity="center"
            android:visibility="invisible"
            android:background="@drawable/shadow_2x"
            />

        <ImageView
            android:id="@+id/infoButtonImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
        />

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/content_padding">

        <TextView
            android:id="@+id/authorPhotoContentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_author_photo"
            android:gravity="right"
            />

        <TextView
            android:id="@+id/dateLongFormatContentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_date_long_format"
            android:gravity="left"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_separate"/>

        <TextView
            android:id="@+id/titleContentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_text_title"
            android:gravity="left"
            android:paddingTop="@dimen/padding_separate"
            />

        <TextView
            android:id="@+id/authorNewsContentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_author_news"
            android:gravity="left"
            android:paddingTop="@dimen/padding_separate"
            />

    </LinearLayout>
</LinearLayout>